2021-07-19  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/endflib.cpp (ENDFScanLibrary): modified
	* source/deceheader.cpp (DeceShowHeaders): modified
	no header print when partial data are given

2021-07-15  KAWANO Toshihiko  <kawano@lanl.gov>

	* tools/deceangdist.cpp (main): updated
	angle step can be provided by command-line option

	* source/decelibread.cpp (DeceLibRead): updated
	message print for verb mode added

2021-06-30  Toshihiko Kawano  <kawano@lanl.gov>

	* source/groupstructure.h: updated
	* source/deceprocgroup.cpp (DeceGenerateGroup): modified
	LANL 618 group structure added as group ID = 4

2021-05-10  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfr.cpp (gfrPrintCrossSection): modified
	accept XYdataConversion global options

	* source/deceprocgroup.cpp (DeceGenerateGroup): modified
	group ID = -1 stands for arbitrary group structure from external file
	* source/deceprocgroup.cpp (DeceReadGroup): new function
	read group structure from external file

2021-05-04  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/coupling.cpp (clebsh_gordan): new function
	wrapper of the m1+m2 != M case

2021-04-24  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfr.cpp (gfrAngDist): modified
	calculate actual angular distributoins from Legendre coefficients
	when AngleStep is set

2021-04-20  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfrformula.cpp (gfrReichMoore): bug fixd
	in the case of channel-spin dependent resonance parameter,
	J=0 was skipped if S=I-1/2

2021-04-12  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/command.cpp (CmdExtractString): modified
	accept both single and double quotation

2021-04-11  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/endfio.cpp (ENDFReadMF1): updated
	* source/decetable1.cpp (DeceTableMF1MT458): updated
	energy-dependent fission energy release case added

	* source/deceglobaloption.cpp (optionSet): modified
	warning message added when no file name is given

2021-03-04  KAWANO Toshihiko  <kawano@lanl.gov>
